--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-filesystem": "^0.1.0",
     "react-native-fs": "^2.13.3",
+    "react-native-swipeout": "^2.3.6",
     "react-native-swiper": "^1.5.14",
     "react-navigation": "^3.0.9",
     "tcomb-form-native": "^0.6.20"
